# number_sums

./: .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  Cursor.cpp  Cursor.hpp  Square.cpp  Square.hpp  main.cpp
.cache/clangd/index/: Board.cpp.B4CE54809BFADDFA.idx  Board.hpp.A8D5D1C9C27DC940.idx  Cell.cpp.C03B8FA90EBA7643.idx  Cell.hpp.43CED4DA9DD2B470.idx  Square.cpp.26EE05EBB07763FB.idx  Square.hpp.EBA97F027D96D175.idx  main.cpp.261444221F74A999.idx
